3629 NFSv4 client: assertion failed: vp->v_filocks == NULL, file: ../../common/fs/vnode.c, line: 2429 Reviewed by: Arne Jansen <arne@die-jansens.de> Approved by: Robert Mustacchi <rm@joyent.com>